--- a/projet-p/ecole-prof.css
+++ b/projet-p/ecole-prof.css
@@ -5,6 +5,7 @@
     list-style: none;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
+
 }
 body {margin-right: 0px;
     min-height: 100vh;
@@ -12,7 +13,7 @@ body {margin-right: 0px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 nav {
     margin-top: 0;
@@ -20,45 +21,53 @@ nav {
     width: 100%;
     background-color: white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+
 }
+
 nav ul {
-    float: right;
-    margin-right: 20px;
-   
+    display: flex;
+    align-items: center;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-    
+    margin: 0 10px;
 }
 
 nav ul li a {
-    color: #1B1A55;
+    color: #614972;
     font-size: 16px;
     padding: 7px 13px;
     border-radius: 15px;
     text-transform: uppercase;
 }
 
-nav a:hover,a.active {
+nav a:hover, a.active {
     color: #fff;
     background-color: #614972;
     transition: 0.5s;
     text-transform: uppercase;
 }
+
+label.logo {
+    color: #90799f;
+    font-size: 30px;
+    font-weight: bold;
+}
+
 .logo img {
     size: 100px;
     width: 220px;
     height: auto;
     padding-left: 3vw;
     margin-top: 1vw;
+    margin-left: -1.5vw;
 }
-nav li:first-child {
-    margin-right: auto;
-}
-.sidebar{
+
+.sidebar {
     position: fixed;
     top: 0;
     right: 0;
@@ -73,18 +82,24 @@ nav li:first-child {
     align-items: flex-start;
     justify-content: flex-start;
 }
-.sidebar li {
-    width: 100%;
-}
-.sidebar a {
+
+.sidebar ul {
     width: 100%;
 }
 
+.sidebar a {
+    width: 100%;
+    color: #fff;
+    font-size: 18px;
+    padding: 15px 20px;
+    box-sizing: border-box;
+}
 
 .menu-button {
     display: none;
 }
-@media(max-width: 800px) {
+
+@media (max-width: 800px) {
     .hideOnMobile {
         display: none;
     }
@@ -92,8 +107,17 @@ nav li:first-child {
     .menu-button {
         display: block;
     }
+
+    nav ul {
+        display: none;
+    }
+
+    .sidebar {
+        display: flex;
+    }
 }
-@media(max-width: 400px) {
+
+@media (max-width: 400px) {
     .sidebar {
         width: 100%;
     }
@@ -120,6 +144,8 @@ nav li:first-child {
     color:#000;
     margin-bottom: 2px;
     background-color: #f3f3fc;
+    font-size: 20px;
+
 }
 .info-c{
     flex-basis: 40%; 
@@ -155,10 +181,12 @@ nav li:first-child {
     color:#000;
     border-color: transparent;
     display: inline-block;
-    min-width: 190px; 
+    min-width: 240px; 
     min-height: 120px;
     cursor: pointer;
     transition:0.5s;
+    font-size: 15px;
+
 }
 
 .content-a::before {
@@ -209,6 +237,7 @@ nav li:first-child {
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     border: none;
+    font-size: 15px;
 }
 .content-b::before {
     content: "";
@@ -259,6 +288,7 @@ nav li:first-child {
     min-height: 120px;
     cursor: pointer;
     transition:0.5s;
+    font-size: 15px;
 }
 
 .content-c::before {
@@ -311,6 +341,8 @@ nav li:first-child {
     min-height: 120px;
     cursor: pointer;
     transition:0.5s;
+    font-size: 15px;
+
 }
 
 .content-d::before {
@@ -582,69 +614,64 @@ margin-top: 20px;
 padding-bottom: 5px;
 }
 
-
-.popup {
-    position: fixed;
+#placeholder {
+    color: #75357cb3; 
+    position: absolute; 
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    opacity: 0;
-    transition: transform 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19), opacity 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
-    z-index: 9999;
-    background: linear-gradient(to right bottom, #3c3a3d, #000000);
-    border-radius: 15px;
-    padding: 20px;
-  
+    left: 50%; 
+    transform: translate(-50%, -50%);     
+}
+#placeholder-icon {
+    width: 50px; 
+    height: 50px; 
+    margin-left : 50%; 
     
 }
-.popup.active {
-    opacity: 1;
-    top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+#profile-picture {
+    width: 32px;
+    height: 30px; 
 }
-.popup-content {
-    font-family: 'Times New Roman', Times, serif;
-    background: linear-gradient(to right bottom, #cec2d4, #8989c1);
-    width: 500px;
-    padding: 20px;
-    border-radius: 15px!important;
-    box-shadow: 0 0 1000px rgba(0, 0, 0, 0.4);
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
 }
 
-  
-  .popup-content h1 {
-    margin-top: 1vw;
-    margin-right: 5vw;
-    color: #000000;
-    text-align: center;
-  }
-  
-  #close-popup-btn {
-    background-color: #ddd;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: transform 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19), opacity 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
-  }
-  #close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 24px;
-    color: #666;
-    margin-left: 0;
-    transition: transform 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19), opacity 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
+.dropdown-content a {
+    color: black;
+    padding: 12px 10px;
+    text-decoration: none;
+    display: block;
+    border-radius: 0;
+    transition: background-color 0.2s ease;
 }
 
-<<<<<<< HEAD
-=======
+.dropdown:hover .dropdown-content {
+    display: block;
+    
+}
+/* Dropdown button styles */
+.dropdown-btn {
+    
+    text-decoration: none;
+    display: block;
+    border: none; /* Remove border */
+    background: none; /* Remove background */
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    color: black; /* Make text transparent */
+    font-size: 18px; /* Set font size to 0 to hide text */
+}
+
 /* Apply hover effect to dropdown button */
 .dropdown-btn:hover {
     color: #ddd; /* Change to match the hover effect color */
@@ -724,7 +751,6 @@ padding-bottom: 5px;
     transition: transform 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19), opacity 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
 }
 
->>>>>>> 403323225dd20bf573c58e40adacc3fc8ef628b1
 .container {
     
     width: 480px;
