--- a/views/teacher_student.ejs
+++ b/views/teacher_student.ejs
@@ -571,7 +571,7 @@ function calculateAge(birthdate) {
     }
     return age;
 }
-    </script>
-
+ </script>
+ <script src="script.js"></script>
 </body>
 </html>
